# code-review-env

./: AGENTS.md  Dockerfile  README.md  bug_generator.py  client.py  dashboard.py  difficulty_escalator.py  environment.py  inference.py  models.py  openenv.yaml  progress.json  pyproject.toml  requirements.txt  reward_history.json  run_local.py  self_play_loop.py  training_demo.py
code-review-env/: Dockerfile  PITCH.md  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
code-review-env/code-review-env/: README.md  inference.py  openenv.yaml  requirements.txt
code-review-env/code-review-env/server/: Dockerfile  app.py  environment.py  grader.py  run.py  tasks.py
code-review-env/server/: app.py  grader.py  tasks.py
code-review-env/tests/: test_environment.py  test_tasks.py
server/: Dockerfile  app.py  environment.py  grader.py  requirements.txt  run.py  tasks.py
server/tasks/: __init__.py  base.py  easy.py  hard.py  medium.py  security.py
tests/: test_grader.py
